--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	background: #0E242D;
-	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	color: #C2C2DA;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	height: 50vh;
 }
 
@@ -9,9 +9,13 @@ a {
 	text-decoration: none;
 }
 
+.hidden {
+	display: none;
+}
+
 .big-green {
-	font-size: 3vh;
 	color: #2ECF73;
+	font-size: 3vh;
 }
 
 .red {
@@ -28,16 +32,16 @@ a {
 }
 
 #moduleInfo {
-	position: fixed;
-	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	position: fixed;
 	text-align: center;
+	top: 50%;
+	transform: translate(-50%, -50%);
 }
 
 #moduleIcon {
-	max-width: 3vh;
 	max-height: 3vh;
+	max-width: 3vh;
 }
 
 #moduleName {
@@ -46,7 +50,7 @@ a {
 
 #moduleName:before {
 	content: '#';
-	font-family: Monaco,Menlo,Consolas,"Courier New",monospace;
+	font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
 	padding-right: 5px;
 }
 
@@ -55,10 +59,39 @@ a {
 }
 
 #footer {
-	font-family: Monaco,Menlo,Consolas,"Courier New",monospace;
-	position: fixed;
-	left: 0;
 	bottom: 0;
-	width: 100%;
+	font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+	left: 0;
+	position: fixed;
 	text-align: center;
+	width: 100%;
+}
+
+.btn {
+	background-color: rgb(0, 109, 204);
+	background-image: linear-gradient(rgb(0, 136, 204), rgb(0, 68, 204), rgb(0, 68, 204));
+	background-size: auto 200%;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.1);
+	border-width: 1px;
+	border-radius: 4px;
+	box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 0px 0px inset, rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+	color: rgb(255, 255, 255);
+	cursor: pointer;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	line-height: 20px;
+	margin-top: 5px;
+	padding: 4px 12px;
+	text-shadow: rgba(0, 0, 0, 0.25) 0px -1px 0px;
+}
+
+.btn:hover, .btn:focus
+{
+	color:#FFF;
+	background-color:#04C;
+	background-position: 0 -15px;
+	-webkit-transition: background-position .1s linear;
+	-moz-transition: background-position .1s linear;
+	-o-transition: background-position .1s linear;
+	transition: background-position .1s linear
 }
