--- a/style.css
+++ b/style.css
@@ -9,13 +9,27 @@ a {
 	text-decoration: none;
 }
 
+
 .hidden {
 	display: none;
 }
 
-.big-green {
-	color: #2ECF73;
+
+.small {
+	font-size: 2vh;
+}
+
+.medium {
 	font-size: 3vh;
+}
+
+.big {
+	font-size: 5vh;
+}
+
+
+.green {
+	color: #2ECF73;
 }
 
 .red {
@@ -26,45 +40,9 @@ a {
 	color: #BABD2F;
 }
 
-.mt-blue {
+.turquoise {
 	color: #7AC9C4;
 	font-weight: bold;
-}
-
-#moduleInfo {
-	left: 50%;
-	position: fixed;
-	text-align: center;
-	top: 50%;
-	transform: translate(-50%, -50%);
-}
-
-#moduleIcon {
-	max-height: 3vh;
-	max-width: 3vh;
-}
-
-#moduleName {
-	font-size: 5vh;
-}
-
-#moduleName:before {
-	content: '#';
-	font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
-	padding-right: 5px;
-}
-
-#cooldown {
-	font-weight: bold;
-}
-
-#footer {
-	bottom: 0;
-	font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
-	left: 0;
-	position: fixed;
-	text-align: center;
-	width: 100%;
 }
 
 .btn {
@@ -94,4 +72,36 @@ a {
 	-moz-transition: background-position .1s linear;
 	-o-transition: background-position .1s linear;
 	transition: background-position .1s linear
+}
+
+#moduleInfo {
+	left: 50%;
+	position: fixed;
+	text-align: center;
+	top: 50%;
+	transform: translate(-50%, -50%);
+}
+
+#moduleIcon {
+	max-height: 3vh;
+	max-width: 3vh;
+}
+
+#moduleName:before {
+	content: '#';
+	font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+	padding-right: 5px;
+}
+
+#cooldown {
+	font-weight: bold;
+}
+
+#footer {
+	bottom: 0;
+	font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+	left: 0;
+	position: fixed;
+	text-align: center;
+	width: 100%;
 }
