--- a/style.css
+++ b/style.css
@@ -26,7 +26,15 @@ a {
     border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: rgb(148, 146, 146);
+	background-color: rgb(148, 146, 146, 0.5);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+	background-color: rgb(148, 146, 146, 0.7);
+}
+
+*::-webkit-scrollbar-thumb:active {
+	background-color: rgb(148, 146, 146);
 }
 
 .hidden {
