--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@ a {
 	text-decoration: none;
 }
 
+
 *::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 	border-radius: 10px;
 	background-color: transparent;
 }
@@ -24,8 +25,8 @@ a {
 
 *::-webkit-scrollbar-thumb {
 	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 	background-color: rgb(148, 146, 146, 0.5);
 }
 
@@ -37,10 +38,10 @@ a {
 	background-color: rgb(148, 146, 146);
 }
 
+
 .hidden {
 	display: none;
 }
-
 
 .small {
 	font-size: 2vh;
@@ -130,8 +131,12 @@ a {
 	right: 5%;
 }
 
+
 #moduleInfo {
+	background-color: #254558;
+	border-radius: 6px;
 	left: 50%;
+	padding: 1% 2.5%;
 	position: fixed;
 	text-align: center;
 	top: 50%;
@@ -196,8 +201,6 @@ a {
 	overflow-y: auto;
 	top: 10px;
 }
-
-
 
 #footer {
 	bottom: 0;
