--- a/style.css
+++ b/style.css
@@ -10,10 +10,38 @@ a {
 }
 
 
+*::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border-radius: 10px;
+	background-color: transparent;
+}
+
+*::-webkit-scrollbar {
+	width: 4px;
+	height: 4px;
+	background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	background-color: rgb(148, 146, 146, 0.5);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+	background-color: rgb(148, 146, 146, 0.7);
+}
+
+*::-webkit-scrollbar-thumb:active {
+	background-color: rgb(148, 146, 146);
+}
+
+
 .hidden {
 	display: none;
 }
-
 
 .small {
 	font-size: 2vh;
@@ -74,8 +102,41 @@ a {
 	transition: background-position .1s linear
 }
 
+.module {
+	border-radius: 6px;
+	position: relative;
+	margin: 8px;
+	padding: 16px;
+	color: #8b8ba1;
+}
+
+.moduleName {
+	display: block;
+	font-size: large;
+	font-weight: bold;
+	color: #ececec;
+}
+
+.moduleName > img {
+	width: 20px;
+	height: 20px;
+}
+
+.profile {
+	color: #009d9d;
+}
+
+.hoster {
+	position: absolute;
+	right: 5%;
+}
+
+
 #moduleInfo {
+	background-color: #254558;
+	border-radius: 6px;
 	left: 50%;
+	padding: 1% 2.5%;
 	position: fixed;
 	text-align: center;
 	top: 50%;
@@ -97,6 +158,49 @@ a {
 	font-weight: bold;
 }
 
+#modules {
+	border-radius: 5px;
+	background-color: #254558;
+	width: 96%;
+	left: 2%;
+	position: relative;
+	height: 96vh;
+}
+
+#moduleList > .module:nth-child(even) {
+	background-color: #243b4d;
+}
+
+#moduleList > .module:nth-child(odd) {
+	background-color: #193040;
+}
+
+#moduleSearch {
+	position: relative;
+	left: calc(4vw + 8px);
+	width: 90%;
+	top: 10px;
+	margin: 5px 0px;
+	padding: 3px;
+	font-size: 20px;
+	border-radius: 6px;
+	box-shadow: inset 5px 3px 6px 3px rgba(214, 214, 214, 0.5);
+}
+
+#moduleList {
+	border-radius: 6px;
+	left: 2%;
+	position: relative;
+	padding: 5px;
+	margin: 5px;
+	max-height: 85%;
+	height: 94%;
+	max-width: 94%;
+	width: 94%;
+	overflow-y: auto;
+	top: 10px;
+}
+
 #footer {
 	bottom: 0;
 	font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
@@ -104,4 +208,12 @@ a {
 	position: fixed;
 	text-align: center;
 	width: 100%;
+}
+
+@media (max-width: 760px) {
+	.hoster {
+		position: relative;
+		display: block;
+		left: 0px;
+	}
 }
