--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ a {
 }
 
 .small {
-	font-size: 2vh;
+	font-size: 2.3vh;
 }
 
 .medium {
@@ -133,7 +133,6 @@ a {
 
 
 #moduleInfo {
-	background-color: #254558;
 	border-radius: 6px;
 	left: 50%;
 	padding: 1% 2.5%;
@@ -215,5 +214,11 @@ a {
 		position: relative;
 		display: block;
 		left: 0px;
+	}
+}
+
+@media (min-width: 760px) {
+	#moduleInfo {
+		background-color: #254558;
 	}
 }
