--- a/style.css
+++ b/style.css
@@ -133,7 +133,8 @@ a {
 
 
 #moduleInfo {
-	box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
+	border-top: 1px solid rgba(255, 255, 255, 0.1);
+	border-bottom: 1px solid rgba(0, 0, 0, 0.8);
 	background-color: #254558;
 	border-radius: 6px;
 	left: 50%;
