--- a/style.css
+++ b/style.css
@@ -103,6 +103,8 @@ a {
 }
 
 .module {
+	border-top: 1px solid rgba(0, 0, 0, 0.2);
+	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 	border-radius: 6px;
 	position: relative;
 	margin: 8px;
@@ -161,6 +163,8 @@ a {
 }
 
 #modules {
+	border-top: 1px solid rgba(255, 255, 255, 0.1);
+	border-bottom: 1px solid rgba(0, 0, 0, 0.8);
 	border-radius: 5px;
 	background-color: #254558;
 	width: 96%;
